--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,9 @@
 {
   "extends": "airbnb-base",
-  "rules": { "no-underscore-dangle" : ["error", { "allow": ["_id"] }]}
+  "rules": {
+    "no-underscore-dangle": [2, {"allow": ["_id"]}],
+    "consistent-return": [0],
+    "no-shadow": [0],
+    "eqeqeq": [0]
+  }
 }
