--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-# Logs
-logs
+/logs
 *.log
 npm-debug.log*
-
-# Dependency directory
-node_modules
-
-# Optional npm cache directory
+/node_modules
 .npm
-
-# Optional REPL history
 .DS_Store
 .idea
+/dist
+/.vscode
+.env
+*.log
