--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "My backend project for Yandex Praktikum",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "cross-env process.env.NODE_ENV=production node app.js",
+    "dev": "cross-env process.env.NODE_ENV=development nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "celebrate": "^11.0.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
