little changes in errors files, create Errors handlers

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "no-underscore-dangle": [2, {"allow": ["_id"]}],
     "consistent-return": [0],
     "no-shadow": [0],
-    "eqeqeq": [0]
+    "eqeqeq": [0],
+    "no-unused-vars": [0]
   }
 }
