--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My backend project for Yandex Praktikum",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env process.env.NODE_ENV=production node app.js",
+    "start": "node app.js",
     "dev": "cross-env process.env.NODE_ENV=development nodemon app.js"
   },
   "repository": {
